Major refactoring of in console interaction.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ NeuralNetwork/Debug/
 NeuralNetwork/output_2_4_3_1.txt
 NeuralNetwork/output_2_4_3_1_.25_0.5.txt
 NeuralNetwork/NeuralNetwork.VC.VC.opendb
+NeuralNetwork/output_xor.txt
